# Ln-trans

./: .gitignore  100_50_10.json  Modelfile  README.md  Untitled.ipynb  agentchat_agentoptimizer.ipynb  agentchat_test.ipynb  agentchat_test2.ipynb  agentchat_test2_colab.ipynb  agentchat_test3.ipynb  agentchat_test4_colab.ipynb  data.json  note.md  pre-question.txt  pyproject.toml  result.txt  simple_chaiui.py  test.py  test2.py  test_chainlit_crewai.py  test_comet.py  test_crewai_async.py  test_pyautogen.py  test_pyautogen2.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  agentchat_test-checkpoint.ipynb  agentchat_test2-checkpoint.ipynb  agentchat_test3-checkpoint.ipynb  note-checkpoint.md  result-checkpoint.txt
src/ln_trans/: crew.py  main.py
